# FAWNCalc

./: Makefile  Makefile.in  README.db  README.md  build.sh  cdr.cgi  cdrpasswd  cgic.c  cgic.h  cgiio.c  config.h  config.h.in  config.status  configure  configure.in  db0.cgtxt  db0.cgtxt.bak  db1.cgtxt  db1.cgtxt.bak  dbtool.sh  edit.c  email.c  email.h  eval.c  fawncalc.cgi  fawncalc.css  fawncalc.xcf  fnncgi.c  fnntab.c  graphs.c  html.c  index.htm  info.htm  login.c  mergesort.c  orig-db.txt  paper.ms  parts.c  plot.c  rules.c  (+6 more)
autom4te.cache/: output.0  traces.0
docs/db/: index.html
