#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.52)
#AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_INIT(fawncalc, 0.0, william@a9group.net)
AC_CONFIG_SRCDIR([cgic.c])
AC_CONFIG_HEADER([config.h])

AC_PREFIX_DEFAULT(./)

# Checks for programs.
AC_PROG_CC

AC_PATH_PROG(GNUPLOT, [gnuplot])
if test "${GNUPLOT}" = "no"
then
	echo "Cannot find gnuplot.  Please install gnuplot and try again."
	exit 1
fi
AC_DEFINE_UNQUOTED(GNUPLOT, "${GNUPLOT}", [Path to gnuplot])

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lcgic':
# cgic should be in same directory...
# AC_CHECK_LIB([cgic], [main])
AC_CHECK_LIB([crypt], [crypt])

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([fcntl.h limits.h netdb.h stdlib.h string.h strings.h sys/file.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_C_VOLATILE

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([gethostbyname strdup strspn strstr strtol])
AC_REPLACE_FUNCS([mergesort])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
